Fix button/logo spacing

--- a/index.css
+++ b/index.css
@@ -48,6 +48,7 @@ body {
     display: inline-block;
     border-radius: 33px;
     text-decoration: none;
+    margin-bottom: 20px;
 }
 
 .button:hover {
